# multi-claude

./: .gitignore  README.md  mcl.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: test.yml
docs/: MANAGER.md  MANAGER_ADVANCED.md  MANAGER_QUICK_REFERENCE.md
tests/: README.md  __init__.py  conftest.py  test_agent_spawning.py  test_confidence_system.py  test_logging_system.py  test_manager.py  test_unit.py
