[project]
name = "multi-claude"
version = "0.1.0"
description = "Run multiple Claude Code instances in parallel"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Andrew Brookins", email = "a.m.brookins@gmail.com"}
]
license = {text = "MIT"}
keywords = ["claude", "ai", "development", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "rich>=10.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests with mocked dependencies",
    "integration: Integration tests with real dependencies",
    "slow: Tests that take more than a few seconds",
]

[project.scripts]
mcl = "mcl:main"

[project.urls]
Homepage = "https://github.com/abrookins/multi-claude"
Repository = "https://github.com/abrookins/multi-claude"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
